# apiguard

./: CHANGELOG.md  README.md  pyproject.toml
apiguard/: __init__.py  __main__.py  cli.py  differ.py  parser.py  reporters.py  rules.py
kryptorious_apiguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_differ.py  test_parser.py
tests/fixtures/: params_v1.yaml  params_v2.yaml  petstore_v1.yaml  petstore_v2_breaking.yaml  petstore_v2_nonbreaking.yaml  ref_spec_v1.yaml  ref_spec_v2.yaml
